page de co qui marche

--- a/site_departement_info/html/organisation-des-etudes.html
+++ b/site_departement_info/html/organisation-des-etudes.html
@@ -12,8 +12,8 @@
 
 <body>
     <div class="top">
-        <h1>BUT Aix en Provence - Département informatique</h1>
-        <img src="../images/logo/logoblanc.svg" width="20%"/>
+        <h1 class="phrase">BUT Aix en Provence - Département informatique</h1>
+        <img src="../images/logo/logoblanc.svg" width="300px"/>
     </div>
     <nav class="navbar">
             <ul class="nav-links">
@@ -21,39 +21,47 @@
                 <li><a id="pageactuelle" href="organisation-des-etudes.html" class="nav-item">Organisation des études</a></li>
                 <li><a href="parcours-et-debouches.html" class="nav-item">Parcours</a></li>
                 <li><a href="bde.html" class="nav-item">BDE</a></li>
-                <img id="intra" src="../images/logo/logo-intranet.png">
+                <a href="login.html"><img href="login.html" id="intra" src="../images/logo/logo-intranet.png"></a>
             </ul>
     </nav>
-    <h2 id="titres">Formation</h2>
-    <div class="content">
-        <p>Répartie sur 3 années, la formation représente 1800 heures encadrées,
-            auxquelles s'ajoutent 600 heures de projets tutorés et à minima 22 à 26 semaines
-            de stage et/ou d'alternance. Les deux parcours suivants sont proposés 
-            au Département d’Informatique de l’IUT site d’Aix-en-Provence :</p>
-            <div class="parcours">
-                <p>Réalisation d'applications : conception, développement, validation</p>
-                <p>Déploiement d’applications communicantes et sécurisées</p>
+        <div class="flexaff">
+            <div class="content">
+                <div class="logo1"></div>
+                <h2 class="tit2">Formation</h2>
+                <p class="txt">Répartie sur 3 années, la formation représente 1800 heures encadrées,
+                    auxquelles s'ajoutent 600 heures de projets tutorés et à minima 22 à 26 semaines
+                    de stage et/ou d'alternance. Les deux parcours suivants sont proposés 
+                    au Département d’Informatique de l’IUT site d’Aix-en-Provence : la réalisation d'applications
+                    (conception, développement, validation) et le déploiement d’applications communicantes et sécurisées
+                </p>
             </div>
-            <p>Ces deux parcours requièrent des savoir-être et des savoir-faire, tant académiques que professionnels, 
-                organisés autour du développement des six grandes compétences qui caractérisent le B.U.T. Informatique :</p>
-            <ul>
-                <li>Réaliser un développement d’application</li>
-                <li>Optimiser des solutions informatiques</li>
-                <li>Administrer des systèmes informatiques communicants complexes</li>
-                <li>Gérer des données de l’information</li>
-                <li>Conduire un projet</li>
-                <li>Travailler dans une équipe informatique</li>
-            </ul>
-            <p>En particulier, le premier parcours repose sur une consolidation de la compétence "Optimiser des solutions
-                 informatiques", alors que le second parcours s’appuie sur un renforcement de la compétence 
-                 "Administrer des systèmes informatiques communicants complexes". Sur le site d’Aix-en-Provence, 
-                 les deux parcours aborderont par ailleurs l’utilisation d’outils d’IA liés respectivement aux questions 
-                 d’optimisation et de sécurisation. D’un point de vue pratique, une partie du cursus pourra être réalisé en 
-                 alternance ; une sortie diplômante à bac + 2 restera possible via l’obtention du D.U.T Informatique. Enfin, 
-                 il sera en principe envisageable de suivre 1 ou 2 semestres à l’étranger pendant le cursus.</p>
+            <div class="content">
+                <div class="logo2"></div>
+                <h2 class="tit2">Parcours</h2>
+                <p class="txt">Ces deux parcours requièrent des savoir-être et des savoir-faire, tant académiques que professionnels, 
+                    organisés autour du développement des six grandes compétences qui caractérisent le B.U.T. Informatique : 
+                    Réaliser un développement d’application, 
+                    Optimiser des solutions informatiques, 
+                    Administrer des systèmes informatiques communicants complexes, 
+                    Gérer des données de l’information, 
+                    Conduire un projet, 
+                    Travailler dans une équipe informatique, 
+                </p>
+            </div>
+            <div class="content">
+                <div class="logo3"></div>
+                <h2 class="tit2">Détails</h2>
+                <p class="txt">En particulier, le premier parcours repose sur une consolidation de la compétence "Optimiser des solutions
+                    informatiques", alors que le second parcours s’appuie sur un renforcement de la compétence 
+                    "Administrer des systèmes informatiques communicants complexes". D’un point de vue pratique, une partie du cursus pourra être réalisé en 
+                    alternance ; une sortie diplômante à bac + 2 restera possible via l’obtention du D.U.T Informatique. Enfin, 
+                    il sera en principe envisageable de suivre 1 ou 2 semestres à l’étranger pendant le cursus.
+                </p>
         </div>
-        <h2 id="titres">Structure et organisation</h2>
+            
+        </div>
         <div class="parcours"> 
+            <h3>Structure et organisation</h3>
             <ul>
                 <li>Le programme : 2000 heures de cours + 600 h de Projet tutoré répartis sur 6 semestres en 3 années avec un maximum de 32h de cours par semaine.</li>
                 <li>Périodes de stages de 22 à 26 semaines.</li>
@@ -62,6 +70,14 @@
                 <li>Certifications proposées : PIX, TOEIC, Voltaire</li>
             </ul>
         </div>
+        <footer class="footer">
+            <div class="flexFooter">
+                <img src="../images/logo/logoblanc.svg" class="left" width="230px"/>
+    
+                <a href="https://discord.gg/k7c97u4DwS" target="_blank"><div src="../images/logo/logo-discord.png" title="Serveur discord" class="discord" ></div></a>
+                <a href="https://www.instagram.com/iutaixmars?igsh=bjcwZnNxaWw1dXVx" target="_blank"><div src="../images/logo/logo-instagram.webp" title="compte instagram" class="insta"></div></a>
+            </div>
+        </footer>
 
     <script src="../javascript/script.js"></script>
 </body>
