--- a/site_departement_info/html/parcours-et-debouches.html
+++ b/site_departement_info/html/parcours-et-debouches.html
@@ -12,8 +12,8 @@
 
 <body>
     <div class="top">
-        <h1>BUT Aix en Provence - Département informatique</h1>
-        <img src="../images/logo/logoblanc.svg" width="20%"/>
+        <h1 class="phrase">BUT Aix en Provence - Département informatique</h1>
+        <img src="../images/logo/logoblanc.svg" width="300px"/>
     </div>
     <nav class="navbar">
             <ul class="nav-links">
@@ -21,36 +21,48 @@
                 <li><a href="organisation-des-etudes.html" class="nav-item">Organisation des études</a></li>
                 <li><a id="pageactuelle" href="parcours-et-debouches.html" class="nav-item">Parcours</a></li>
                 <li><a href="bde.html" class="nav-item">BDE</a></li>
-                <img id="intra" src="../images/logo/logo-intranet.png">
+                <a href="login.html"><img href="login.html" id="intra" src="../images/logo/logo-intranet.png"></a>
             </ul>
         </nav>
-        <h2 id="titres">Parcours Réalisation d’applications : conception, développement, validation</h2>
-        <div class="content">
-            <p>Ce parcours forme des cadres intermédiaires capables :<br>
-– de développer des applications complexes, c’est-à-dire recueillir et analyser les besoins du client, développer ou adapter une application complexe de qualité, réaliser la maintenance ou le suivi de cette application ;<br>
-– de mettre en place des jeux de tests, c’est-à-dire construire des jeux d’essais, automatiser leur exécution et assurer l’intégration continue.<br><br>
-En outre, la personne titulaire du B.U.T. Informatique parcours Réalisation d’applications : conception, développement, validation dispose de compétences en matière de raisonnement et de modélisation mathématiques, en droit, économie et gestion des entreprises et des administrations, en expression-communication et en langue anglaise.<br><br>
-Activités préparées par le parcours :<br>
-Le développement d’application consiste à recueillir les besoins des clients, analyser ces besoins, concevoir et réaliser une implémentation répondant au cahier des charges, dans des contextes qui peuvent être spécialisés en fonction de domaines métiers (gestion, finance, santé, jeux vidéos,...) ou des plateformes de développement spécifiques (web, mobile, desktop, IoT...). Le développeur peut accéder à des 
-métiers plus spécialisés : développement web, développement mobile, développement frontend, développement fullstack, développement backend, architecte logiciel, lead developer, DevOps. Le développement doit suivre l’état de l’art en matière de processus qualité, de sécurité et d’efficacité (temps de calcul, green computing), ce qui nécessite le développement de compétences variées. Les équipes de développement pouvant être de taille conséquente, il est nécessaire d’être formé aux diverses techniques de travail en équipe usuelles dans le domaine.<br>
-Les métiers de testeurs correspondent à l’intégration d’applications, leur déploiement et la conception et réalisation de tests visant à en assurer la qualité. Ces métiers en plein essor permettent de faire le lien entre les exigences métiers spécifiques à un domaine et la partie développement explicitée plus haut. Les tests peuvent concerner les tests utilisateur, les tests fonctionnels, la non-régression.</p>
+        <div class="bg">
+            <div class="content2">
+                <h3>Parcours Réalisation d’applications : conception, développement, validation</h3><br>
+                <p>Ce parcours forme des cadres intermédiaires capables :<br>
+    – de développer des applications complexes, c’est-à-dire recueillir et analyser les besoins du client, développer ou adapter une application complexe de qualité, réaliser la maintenance ou le suivi de cette application ;<br>
+    – de mettre en place des jeux de tests, c’est-à-dire construire des jeux d’essais, automatiser leur exécution et assurer l’intégration continue.<br><br>
+    En outre, la personne titulaire du B.U.T. Informatique parcours Réalisation d’applications : conception, développement, validation dispose de compétences en matière de raisonnement et de modélisation mathématiques, en droit, économie et gestion des entreprises et des administrations, en expression-communication et en langue anglaise.<br><br>
+    Activités préparées par le parcours :<br>
+    Le développement d’application consiste à recueillir les besoins des clients, analyser ces besoins, concevoir et réaliser une implémentation répondant au cahier des charges, dans des contextes qui peuvent être spécialisés en fonction de domaines métiers (gestion, finance, santé, jeux vidéos,...) ou des plateformes de développement spécifiques (web, mobile, desktop, IoT...). Le développeur peut accéder à des 
+    métiers plus spécialisés : développement web, développement mobile, développement frontend, développement fullstack, développement backend, architecte logiciel, lead developer, DevOps. Le développement doit suivre l’état de l’art en matière de processus qualité, de sécurité et d’efficacité (temps de calcul, green computing), ce qui nécessite le développement de compétences variées. Les équipes de développement pouvant être de taille conséquente, il est nécessaire d’être formé aux diverses techniques de travail en équipe usuelles dans le domaine.<br>
+    Les métiers de testeurs correspondent à l’intégration d’applications, leur déploiement et la conception et réalisation de tests visant à en assurer la qualité. Ces métiers en plein essor permettent de faire le lien entre les exigences métiers spécifiques à un domaine et la partie développement explicitée plus haut. Les tests peuvent concerner les tests utilisateur, les tests fonctionnels, la non-régression.</p>
+            </div>
         </div>
-        <h2 id="titres">Parcours Déploiement d’applications communicantes et sécurisées</h2>
-    <div class="content">
-        <p>Ce parcours forme des cadres intermédiaires capables :<br>
-            – de concevoir l’architecture du système d’information, d’installer et de configurer les matériels et les logiciels informatiques dont a besoin une organisation ;<br>
-            – de maintenir, développer et adapter (optimiser) l’infrastructure matérielle et logicielle, tout en veillant aux besoins des utilisateurs et aux évolutions technologiques ;<br>
-            – de construire des applications client-serveur correspondant à un besoin métier ;<br>
-            – d’anticiper les différents risques relatifs à la sécurité informatique et de mettre en place les solutions et procédures nécessaires à la continuité de service, dans le cas (en particulier) de cyberattaques.<br><br>
-            En outre, la personne titulaire du B.U.T. Informatique parcours Déploiement d’applications communicantes et sécurisées dispose de compétences en matière de raisonnement et de modélisation mathématiques, en droit, économie et gestion des entreprises et des administrations, en expression-communication et en langue anglaise.<br><br>
-            Activités préparées par le parcours :<br>
-            Les activités de ce parcours s’articulent autour de trois axes : l’installation, la configuration et l’optimisation des systèmes informatiques. Les missions confiées concernent également le déploiement et la sécurisation de réseaux d’une part, l’installation et la configuration de services applicatifs ainsi que le développement d’applications client-serveur répondant aux exigences d’une organisation d’autre part.<br>
-            Les activités regroupent les métiers chargés de créer l’environnement de travail et de  communication d’une entreprise, tels qu’administrateur système et réseaux, DevOps, chargé du déploiement d’applications dans un environnement cloud et gestionnaire de la cybersécurité.
-            Par ailleurs la complexité des technologies utilisées implique aussi une assistance utilisateur (dépannage, installation, formation, paramétrage...) pour répondre aux besoins.<br>
-            Dans notre monde ultra-connecté, la sécurisation et la bonne circulation des informations sont devenues un enjeu vital pour les organisations. L’architecte système et réseau, garant des données, doit se tenir au courant de toutes les évolutions technologiques et réglementaires.
+    <div class="bg2">
+        <div class="content2">
+            <h3>Parcours Déploiement d’applications communicantes et sécurisées</h3><br>
+            <p>Ce parcours forme des cadres intermédiaires capables :<br>
+                – de concevoir l’architecture du système d’information, d’installer et de configurer les matériels et les logiciels informatiques dont a besoin une organisation ;<br>
+                – de maintenir, développer et adapter (optimiser) l’infrastructure matérielle et logicielle, tout en veillant aux besoins des utilisateurs et aux évolutions technologiques ;<br>
+                – de construire des applications client-serveur correspondant à un besoin métier ;<br>
+                – d’anticiper les différents risques relatifs à la sécurité informatique et de mettre en place les solutions et procédures nécessaires à la continuité de service, dans le cas (en particulier) de cyberattaques.<br><br>
+                En outre, la personne titulaire du B.U.T. Informatique parcours Déploiement d’applications communicantes et sécurisées dispose de compétences en matière de raisonnement et de modélisation mathématiques, en droit, économie et gestion des entreprises et des administrations, en expression-communication et en langue anglaise.<br><br>
+                Activités préparées par le parcours :<br>
+                Les activités de ce parcours s’articulent autour de trois axes : l’installation, la configuration et l’optimisation des systèmes informatiques. Les missions confiées concernent également le déploiement et la sécurisation de réseaux d’une part, l’installation et la configuration de services applicatifs ainsi que le développement d’applications client-serveur répondant aux exigences d’une organisation d’autre part.<br>
+                Les activités regroupent les métiers chargés de créer l’environnement de travail et de  communication d’une entreprise, tels qu’administrateur système et réseaux, DevOps, chargé du déploiement d’applications dans un environnement cloud et gestionnaire de la cybersécurité.
+                Par ailleurs la complexité des technologies utilisées implique aussi une assistance utilisateur (dépannage, installation, formation, paramétrage...) pour répondre aux besoins.<br>
+                Dans notre monde ultra-connecté, la sécurisation et la bonne circulation des informations sont devenues un enjeu vital pour les organisations. L’architecte système et réseau, garant des données, doit se tenir au courant de toutes les évolutions technologiques et réglementaires.
 
-        </p>
+            </p>
+        </div>
     </div>
+    <footer class="footer">
+        <div class="flexFooter">
+            <img src="../images/logo/logoblanc.svg" class="left" width="230px"/>
+
+            <a href="https://discord.gg/k7c97u4DwS" target="_blank"><div src="../images/logo/logo-discord.png" title="Serveur discord" class="discord" ></div></a>
+            <a href="https://www.instagram.com/iutaixmars?igsh=bjcwZnNxaWw1dXVx" target="_blank"><div src="../images/logo/logo-instagram.webp" title="compte instagram" class="insta"></div></a>
+        </div>
+    </footer>
 
     <script src="../javascript/script.js"></script>
 </body>
