--- a/site_departement_info/html/bde.html
+++ b/site_departement_info/html/bde.html
@@ -12,8 +12,8 @@
 
 <body>
     <div class="top">
-        <h1>BUT Aix en Provence - Département informatique</h1>
-        <img src="../images/logo/logoblanc.svg" width="20%"/>
+        <h1 class="phrase">BUT Aix en Provence - Département informatique</h1>
+        <img src="../images/logo/logoblanc.svg" width="300px"/>
     </div>
     <nav class="navbar">
             <ul class="nav-links">
@@ -21,19 +21,22 @@
                 <li><a href="organisation-des-etudes.html" class="nav-item">Organisation des études</a></li>
                 <li><a href="parcours-et-debouches.html" class="nav-item">Parcours</a></li>
                 <li><a id="pageactuelle" href="bde.html" class="nav-item">BDE</a></li>
-                <img id="intra" src="../images/logo/logo-intranet.png">
+                <a href="login.html"><img id="intra" src="../images/logo/logo-intranet.png"></a>
             </ul>
     </nav>
-    <h2 id="titres">Le BDE de notre département</h2>
-    <div class="content">
+    <div class="content2">
+        <h3>Le BDE de notre département</h3>
         <p>Le BDE (Bureau des élèves) est un endroit où l'on peut se detendre</p>
     </div>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <footer class="footer">
-        <img src="../images/logo/logoblanc.svg" width="20%"/>
-        <a class="lien" href="https://discord.gg/k7c97u4DwS" target="_blank"><img src="../images/logo/logo-discord.png" title="Serveur discord" width="5%"/></a>
-        <a class="lien" href="https://www.instagram.com/iutaixmars?igsh=bjcwZnNxaWw1dXVx" target="_blank"><img src="../images/logo/logo-instagram.webp" title="compte instagram" width="5%"/></a>
+        <div class="flexFooter">
+            <img src="../images/logo/logoblanc.svg" class="left" width="230px"/>
+
+            <a href="https://discord.gg/k7c97u4DwS" target="_blank"><div src="../images/logo/logo-discord.png" title="Serveur discord" class="discord" ></div></a>
+            <a href="https://www.instagram.com/iutaixmars?igsh=bjcwZnNxaWw1dXVx" target="_blank"><div src="../images/logo/logo-instagram.webp" title="compte instagram" class="insta"></div></a>
+        </div>
     </footer>
     <script src="../javascript/script.js"></script>
 </body>
