--- a/site_departement_info/html/index.html
+++ b/site_departement_info/html/index.html
@@ -11,8 +11,8 @@
 </head>
 <body bgproprieties="fixed">
     <div class="top">
-        <h1>BUT Aix en Provence - Département informatique</h1>
-        <img src="../images/logo/logoblanc.svg" width="20%"/>
+        <h1 class="phrase">BUT Aix en Provence - Département informatique</h1>
+        <img src="../images/logo/logoblanc.svg" width="300px"/>
     </div>
     <nav class="navbar">
             <ul class="nav-links">
@@ -20,7 +20,7 @@
                 <li><a href="organisation-des-etudes.html" class="nav-item">Organisation des études</a></li>
                 <li><a href="parcours-et-debouches.html" class="nav-item">Parcours</a></li>
                 <li><a href="bde.html" class="nav-item">BDE</a></li>
-                <img id="intra" src="../images/logo/logo-intranet.png">
+                <a href="login.html"><img id="intra" src="../images/logo/logo-intranet.png"></a>
             </ul>
     </nav>
     <div class="toutesactu">
@@ -76,20 +76,20 @@
             Il forme aux métiers d'administrateur système/réseaux ou applicatifs, cybersécurité, DevOps, intégrateurs d'application, ect<br></p>
         </p></div>
         </div>
-    <div class="content">
-        
-    </div>
     <div class="part3">
-        <h2 class="tit">Adresse</h2>
-        <div class="content">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2893.393433830907!2d5.448780176271228!3d43.51498776135885!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12c98d8e7e25baf9%3A0x426426652ef1a0ae!2s413%20Av.%20Gaston%20Berger%2C%2013100%20Aix-en-Provence!5e0!3m2!1sfr!2sfr!4v1705492389833!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="imageCarte" width="200px" onclick="montreCarte();">
         </div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2893.393433830907!2d5.448780176271228!3d43.51498776135885!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12c98d8e7e25baf9%3A0x426426652ef1a0ae!2s413%20Av.%20Gaston%20Berger%2C%2013100%20Aix-en-Provence!5e0!3m2!1sfr!2sfr!4v1705492389833!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="carte"></iframe>
     </div>
 
     <footer class="footer">
-        <img src="../images/logo/logoblanc.svg" width="20%"/>
-        <a class="lien" href="https://discord.gg/k7c97u4DwS" target="_blank"><img src="../images/logo/logo-discord.png" title="Serveur discord" width="10%"/></a>
-        <a class="lien" href="https://www.instagram.com/iutaixmars?igsh=bjcwZnNxaWw1dXVx" target="_blank"><img src="../images/logo/logo-instagram.webp" title="compte instagram" width="10%"/></a>
+        
+        <div class="flexFooter">
+            <img src="../images/logo/logoblanc.svg" class="left" width="230px"/>
+
+            <a href="https://discord.gg/k7c97u4DwS" target="_blank"><div src="../images/logo/logo-discord.png" title="Serveur discord" class="discord" ></div></a>
+            <a href="https://www.instagram.com/iutaixmars?igsh=bjcwZnNxaWw1dXVx" target="_blank"><div src="../images/logo/logo-instagram.webp" title="compte instagram" class="insta"></div></a>
+        </div>
     </footer>
 
     <script src="../javascript/script.js"></script>
