--- a/IntraNet/BoutiqueBDE.html
+++ b/IntraNet/BoutiqueBDE.html
@@ -28,9 +28,42 @@
     </div>
     <div class="vrai_produit">
         <div class="vrai_vrai_produit">
+            <a href="https://informaix.sumupstore.com/article/t-shirt-japon">
             <div><img src="img/t%20shirt%20japon.png"></div>
             <div>Prix : 20€</div>
-            <div>Taille disponible : Toutes</div>
+            <div>Tailles disponibles : Toutes</div></a>
+        </div>
+        <div class="vrai_vrai_produit">
+            <a href="https://informaix.sumupstore.com/article/t-shirt-inform-aix-blanc">
+            <div><img src="img/t_shirt_blanc.png"></div>
+            <div>Prix : 20€</div>
+                <div>Tailles disponibles : Toutes</div></a>
+        </div>
+        <div class="vrai_vrai_produit">
+            <a href="https://informaix.sumupstore.com/article/t-shirt-inform-aix-noir">
+            <div><img src="img/t%20shit%20noir.png"></div>
+            <div>Prix : 20€</div>
+                <div>Tailles disponibles : Toutes</div></a>
+    </div>
+    </div>
+    <div class="vrai_produit">
+            <div class="vrai_vrai_produit">
+                <a href="https://informaix.sumupstore.com/article/sweat-gamer">
+                <div><img src="img/pull_gamer.png"></div>
+                <div>Prix : 35€</div>
+                    <div>Tailles disponibles : Toutes sauf M</div></a>
+            </div>
+            <div class="vrai_vrai_produit">
+                <a href="https://informaix.sumupstore.com/article/sweat-informatique">
+                <div><img src="img/pull_informaix.png"></div>
+                <div>Prix : 35€</div>
+                    <div>Tailles disponibles : Toutes</div></a>
+            </div>
+        <div class="vrai_vrai_produit">
+            <a href="https://informaix.sumupstore.com/article/sweat-inform-aix-noir">
+            <div><img src="img/pull_noir.png"></div>
+            <div>Prix : 35€</div>
+                <div>Tailles disponibles : Toutes sauf S et M</div></a>
         </div>
     </div>
 </body>
