--- a/site_departement_info/html/login.html
+++ b/site_departement_info/html/login.html
@@ -32,9 +32,11 @@
         <label><b id="inf3" >Mot de passe</b></label>
         <input type="password" id="cpassword" placeholder="Entrer le mot de passe" name="password" required>
     </div>
+    
     <input type="submit" id='submit' value="Accéder à l'intranet" onclick="envoie();" >
     <input type="submit" id='mdp' value="Modifier mon mot de passe" onclick="modif();" >
     <input type="submit" id='deco' value="Se déconnecter" onclick="deco();" >
+    <input type="submit" id='reset' value="Réinitialiser tous les mots de passes" onclick="reset();" >
     <p class="message"></p>
     
     </div>
