--- a/site_departement_info/html/login.html
+++ b/site_departement_info/html/login.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <div class="top">
-        <h1>BUT Aix en Provence - Département informatique</h1>
-        <img src="../images/logo/logoblanc.svg" width="20%"/>
+        <h1 class="phrase">BUT Aix en Provence - Département informatique</h1>
+        <img src="../images/logo/logoblanc.svg" width="300px"/>
     </div>
     <nav class="navbar">
         <ul class="nav-links">
@@ -15,7 +15,7 @@
             <li><a href="parcours-et-debouches.html" class="nav-item">Parcours et débouchés</a></li>
             <li><a href="organisation-des-etudes.html" class="nav-item">Organisation des études</a></li>
             <li><a href="bde.html" class="nav-item">BDE</a></li>
-            <a href="login.html" id="pageactuelle" class="nav-item"><img id="intra" src="../images/logo/logo-intranet.png"></a>
+            <a href="login.html" id="pageactuelle" ><img href="login.html" id="intra" src="../images/logo/logo-intranet.png"></a>
         </ul>
     </nav>
     <div id="container">
