--- a/site_departement_info/html/login.html
+++ b/site_departement_info/html/login.html
@@ -36,7 +36,7 @@
     <input type="submit" id='submit' value="Accéder à l'intranet" onclick="envoie();" >
     <input type="submit" id='mdp' value="Modifier mon mot de passe" onclick="modif();" >
     <input type="submit" id='deco' value="Se déconnecter" onclick="deco();" >
-    <input type="submit" id='reset' value="Réinitialiser tous les mots de passes" onclick="reset();" >
+    <input type="submit" id='reset' value="Réinitialiser tout les mots de passes" onclick="reset();" >
     <p class="message"></p>
     
     </div>
