--- a/IntraNet/Actualite.html
+++ b/IntraNet/Actualite.html
@@ -7,9 +7,10 @@
 </head>
 <body>
     <header>
+
         <nav class="navbar">
             <div class="e">
-                <a href="index.html"><img src="img/logo_amu_header.png" alt="Accueil"></a>
+                <a href="https://www.univ-amu.fr/"><img src="img/logo_blanc_iut.png" alt="site original de l'iut"></a>
 
                 <h1 class = "logo_title">Intranet Département Informatique AMU</h1>
             </div>
@@ -17,10 +18,64 @@
                 <li><a href="index.html">Accueil</a><li>
                 <li><a href="Actualite.html">Actualité</a><li>
                 <li><a href="BoutiqueBDE.html">Boutique BDE</a><li>
-                <li><a href="ReservationSalle.html">Réservation Salle</a><li>
+                <li><a href="ReservationSalle.html">Reservation salle</a><li>
+
             </ul>
 
         </nav>
     </header>
+
+
+    <div class="e_encadre">
+        <div class="encadrer"><h3>Vêtements du bde disponible !</h3>La mise en vente est disponible de la dernière collection.<br><br>
+            Elle vous mettra au courant des évènements à venir.</div>
+
+        <div class="encadrer"><h3>Conférence sur l'éthique et numérique</h3>Cette conférence a été tenue devant les BUT 2 et 3 le 17/01/2024.<br><br>
+            </div>
+
+        <div class="encadrer"><h3>Nouveau tournoi smash !</h3> EN COURS D'ORGANISATION<br><br>
+            Nos membres du BDE y travaille !</div>
+
+    </div>
+
+    <div class="e_encadre">
+        <div class="encadrer"><h3>Coupe de France des IUT 2024</h3>Évènement le 24/03/2024<br><br>
+            Elle vous mettra au courant des évènements à venir.</div>
+
+        <div class="encadrer"><h3>Forum poursuite d'études</h3>Pour les BUT3<br><br>
+            le 18/01/2024
+            </div>
+
+        <div class="encadrer"><h3>Forum des stages</h3> Pour les BUT2 et BUT3<br><br>
+            le 25/01/2024
+            </div>
+    </div>
+
+    <div class="e_encadre">
+        <div class="encadrer"><h3>Autre Info</h3>Info1<br><br>
+            Info1 Info1 Info1 Info1 Info1 Info1 Info1 Info1 Info1 Info1 Info1 Info1 Info1 Info1 Info1 Info1 Info1 Info1 Info1 Info1 Info1 Info1 </div>
+
+        <div class="encadrer"><h3>Autre Info</h3>Info2<br><br>
+            Info2 Info2 Info2 Info2 Info2 Info2 Info2 Info2 Info2 Info2 Info2 Info2 Info2 Info2 Info2 Info2 Info2 Info2 Info2 </div>
+
+        <div class="encadrer"><h3>Autre Info</h3>Info3<br><br>
+            Info3 Info3 Info3 Info3 Info3 Info3 Info3 Info3 Info3 Info3 Info3 Info3 Info3 Info3 Info3 Info3 Info3 Info3 </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+    <footer>
+        <a class="logo" href="https://www.univ-amu.fr/"><img src="img/logo_amu_header.png"></a>
+        <a class="insta" href="https://www.instagram.com/iutaixmars?igsh=bjcwZnNxaWw1dXVx"><img src="img/logo-insta bleu.png"></a>
+
+    </footer>
+
 </body>
 </html>
