--- a/IntraNet/BoutiqueBDE.html
+++ b/IntraNet/BoutiqueBDE.html
@@ -6,23 +6,23 @@
     <title>Intra-Amu</title>
 </head>
 <body>
-<header>
+    <header>
 
-    <nav class="navbar">
-        <div class="e">
-            <a href="index.html"><img src="img/logo_amu_header.png" alt="Accueil"></a>
+        <nav class="navbar">
+            <div class="e">
+                <a href="https://www.univ-amu.fr/"><img src="img/logo_blanc_iut.png" alt="site original de l'iut"></a>
 
-            <h1 class = "logo_title">Intranet Département Informatique AMU</h1>
-        </div>
-        <ul>
-            <li><a href="index.html">Accueil</a><li>
-            <li><a href="Actualite.html">Actualité</a><li>
-            <li><a href="BoutiqueBDE.html">Boutique BDE</a><li>
-            <li><a href="ReservationSalle.html">Reservation salle</a><li>
+                <h1 class = "logo_title">Intranet Département Informatique AMU</h1>
+            </div>
+            <ul>
+                <li><a href="index.html">Accueil</a><li>
+                <li><a href="Actualite.html">Actualité</a><li>
+                <li><a href="BoutiqueBDE.html">Boutique BDE</a><li>
+                <li><a href="ReservationSalle.html">Reservation salle</a><li>
 
-        </ul>
+            </ul>
 
-    </nav>
-</header>
+        </nav>
+    </header>
 </body>
 </html>
