--- a/IntraNet/ReservationSalle.html
+++ b/IntraNet/ReservationSalle.html
@@ -10,7 +10,7 @@
 
         <nav class="navbar">
             <div class="e">
-                <a href="index.html"><img src="img/logo_amu_header.png" alt="Accueil"></a>
+                <a href="https://www.univ-amu.fr/"><img src="img/logo_blanc_iut.png" alt="site original de l'iut"></a>
 
                 <h1 class = "logo_title">Intranet Département Informatique AMU</h1>
             </div>
