--- a/IntraNet/index.html
+++ b/IntraNet/index.html
@@ -6,13 +6,12 @@
 
     <title>Intra-Amu</title>
 </head>
-<body bgproperties="fixed">
+<body>
     <header>
 
         <nav class="navbar">
             <div class="e">
-                <a href="https://www.univ-amu.fr/"><img src="img/logo_amu_header.png" alt="Accueil"></a>
-
+                <a href="https://www.univ-amu.fr/"><img src="img/logo_blanc_iut.png" alt="site original de l'iut"></a>
                 <h1 class = "logo_title">Intranet Département Informatique AMU</h1>
             </div>
             <ul>
@@ -28,23 +27,23 @@
 
 
 
-        <div class="encadrert"><h2>Bienvenue dans Intra-Amu</h2>le site intranet pour les étudiants du BUT INFO AIX<br>
-            Dans ce site il y aura différentes catégories: </div>
+    <div class="encadrert"><h2>Bienvenue dans Intra-Amu</h2>le site intranet pour les étudiants du BUT INFO AIX<br>
+        Dans ce site il y aura différentes catégories: </div>
     <div class="e_encadre">
-        <div class="encadrer"><h3>Actualité</h3>Cette catégorie représente l'actualité de l'IUT.
+        <div class="encadrer"><h3>Actualité</h3>Cette catégorie représente l'actualité de l'IUT.<br><br>
             Elle vous mettra au courant des évènements à venir.</div>
 
-        <div class="encadrer"><h3>Boutique BUT</h3>Cette catégorie représente l'actualité de l'IUT.
-            Elle vous mettra au courant des évènements à venir.</div>
+        <div class="encadrer"><h3>Boutique BUT</h3>Cette catégorie représente la boutique de notre BDE.<br><br>
+            Elle vous donnera l'occasion d'acheter des vêtements liés à celui-ci et d'acheter des billets pour participer aux évènements organisés par notre BDE.</div>
 
-        <div class="encadrer"><h3>Réservation salle</h3> Permet de réserver une salle en choisissant le jour, l'heure et la salle.
-            Cette fonctionnalité vous sera utile si vous n'êtes pas placé dans la bonne salle en heure de SAE.</div>
+        <div class="encadrer"><h3>Réservation salle</h3> Cette catégorie permet de réserver une salle en choisissant le jour,
+            l'heure et la salle.<br><br> Cette fonctionnalité vous sera utile si vous n'êtes pas placé dans la bonne salle en heure de SAE.</div>
     </div>
 
 
 
     <footer>
-        <a class="logo" href="https://www.univ-amu.fr/"><img src="img/logo_noir_iut.png"></a>
+        <a class="logo" href="https://www.univ-amu.fr/"><img src="img/logo_amu_header.png"></a>
         <a class="insta" href="https://www.instagram.com/iutaixmars?igsh=bjcwZnNxaWw1dXVx"><img src="img/logo-insta bleu.png"></a>
 
     </footer>
