--- a/site_departement_info/html/redirect.html
+++ b/site_departement_info/html/redirect.html
@@ -7,10 +7,9 @@
     <meta name="description" content="Site de du département informatique.">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" type="image/png" href="../images/logo/logo.png">
-    <title>Département informatique - BDE</title>
+    <title>Département informatique - Accueil</title>
 </head>
-
-<body>
+<body bgproprieties="fixed">
     <div class="top">
         <h1 class="phrase">BUT Aix en Provence - Département informatique</h1>
         <img src="../images/logo/logoblanc.svg" width="300px"/>
@@ -20,18 +19,18 @@
                 <li><a href="index.html" class="nav-item">Accueil</a></li>
                 <li><a href="organisation-des-etudes.html" class="nav-item">Organisation des études</a></li>
                 <li><a href="parcours-et-debouches.html" class="nav-item">Parcours</a></li>
-                <li><a id="pageactuelle" href="bde.html" class="nav-item">BDE</a></li>
+                <li><a href="bde.html" class="nav-item">BDE</a></li>
                 <a href="login.html"><img id="intra" src="../images/logo/logo-intranet.png"></a>
             </ul>
     </nav>
-    <div class="content4">
-        <h3>Le BDE de notre département</h3>
-        <p>Le BDE (Bureau des élèves) est un endroit où l'on peut se detendre tout en profitant des services proposés par les membres du BDE tel q'une ps4, une switch, et plusieurs mangas totalement gratuitement ! Vous pourrez aussi profiter des snacks et des boissons vendu par les membres à moindre coût !<br>Le BDE est ouvert tous les jours de la semaines pendant les pauses y compris celle du midi.</p>
-
+    <div class="content5">
+        <img width="100px" height="100px" src="../images/logo/erreur.png"/>
+        <h3>Erreur, vous n'avez pas la permission d'accèder.</h3><br>
+        <p>L'intranet est réservé aux étudiants du département informatique de l'IUT d'Aix-en-Provence.</p>
     </div>
-    <div class="imgbde"></div>
-    
+</div>
     <footer class="footer">
+        
         <div class="flexFooter">
             <img src="../images/logo/logoblanc.svg" class="left" width="230px"/>
 
@@ -39,6 +38,7 @@
             <a href="https://www.instagram.com/iutaixmars?igsh=bjcwZnNxaWw1dXVx" target="_blank"><div src="../images/logo/logo-instagram.webp" title="compte instagram" class="insta"></div></a>
         </div>
     </footer>
+
     <script src="../javascript/script.js"></script>
 </body>
 
