--- a/site_departement_info/html/bde.html
+++ b/site_departement_info/html/bde.html
@@ -24,12 +24,12 @@
                 <a href="login.html"><img id="intra" src="../images/logo/logo-intranet.png"></a>
             </ul>
     </nav>
-    <div class="content2">
+    <div class="content4">
         <h3>Le BDE de notre département</h3>
         <p>Le BDE (Bureau des élèves) est un endroit où l'on peut se detendre</p>
     </div>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <div class="imgbde"></div>
+    
     <footer class="footer">
         <div class="flexFooter">
             <img src="../images/logo/logoblanc.svg" class="left" width="230px"/>
