--- a/site_departement_info/html/login.html
+++ b/site_departement_info/html/login.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="../css/style.css" media="screen" type="text/css" />
 </head>
 <body>
+    
     <div class="top">
         <h1 class="phrase">BUT Aix en Provence - Département informatique</h1>
         <img src="../images/logo/logoblanc.svg" width="300px"/>
@@ -18,6 +19,7 @@
             <a href="login.html" id="pageactuelle" ><img href="login.html" id="intra" src="../images/logo/logo-intranet.png"></a>
         </ul>
     </nav>
+    <div id="prbg">
     <div id="container">
     <div id="cache">
         <h1 id="tite">Connexion</h1>
@@ -40,6 +42,7 @@
     <p class="message"></p>
     
     </div>
+    </div>
     <footer class="footer">
         <div class="flexFooter">
             <img src="../images/logo/logoblanc.svg" class="left" width="230px"/>
@@ -48,6 +51,7 @@
             <a href="https://www.instagram.com/iutaixmars?igsh=bjcwZnNxaWw1dXVx" target="_blank"><div src="../images/logo/logo-instagram.webp" title="compte instagram" class="insta"></div></a>
         </div>
     </footer>
+
     <script src="../javascript/formulaire.js"></script>
 </body>
 </html>
