--- a/site_departement_info/html/login.html
+++ b/site_departement_info/html/login.html
@@ -40,7 +40,7 @@
     <input type="submit" id='deco' value="Se déconnecter" onclick="deco();" >
     <input type="submit" id='reset' value="Réinitialiser tout les mots de passes" onclick="reset();" >
     <p class="message"></p>
-    
+    <input type="submit" id='gointra' value="Aller sur le site de l'intranet" onclick="intra();" >
     </div>
     </div>
     <footer class="footer">
