--- a/site_departement_info/html/index.html
+++ b/site_departement_info/html/index.html
@@ -1,39 +1,53 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Site de du département informatique.">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="icon" type="image/png" href="../images/logo/logo.png">
-    <title>Département informatique - Accueil</title>
+
+    <title>Intra-Amu</title>
 </head>
 <body>
-    <div class="top">
-        <h1>BUT Aix en Provence - Département informatique</h1>
-        <img src="../images/logo/logoblanc.svg" width="20%"/>
-    </div>
-    <nav class="navbar">
-            <ul class="nav-links">
-                <li><a id="pageactuelle" href="index.html" class="nav-item">Accueil</a></li>
-                <li><a href="parcours-et-debouches.html" class="nav-item">Parcours et débouchés</a></li>
-                <li><a href="organisation-des-etudes.html" class="nav-item">Organisation des études</a></li>
-                <li><a href="bde.html" class="nav-item">BDE</a></li>
-                <a href="login.html" class="nav-item"><img id="intra" src="../images/logo/logo-intranet.png"></a>
+    <header>
+
+        <nav class="navbar">
+            <div class="e">
+                <a href="https://www.univ-amu.fr/"><img src="../img/logo_blanc_iut.png" alt="site original de l'iut"></a>
+                <h1 class = "logo_title">Intranet Département Informatique AMU</h1>
+            </div>
+            <ul>
+                <li><a href="index.html">Accueil</a><li>
+                <li><a href="Actualite.html">Actualité</a><li>
+                <li><a href="BoutiqueBDE.html">Boutique BDE</a><li>
+                <li><a href="ReservationSalle.html">Reservation salle</a><li>
+
             </ul>
-    </nav>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <img class="logonormal" src="../images/logo/logonormal.svg"/>
-    <button onclick="darkMode()">Darkmode</button>
-    <button onclick="lightMode()">LightMode</button>
 
-    <!-- Attaquants -->
-    
-    <a href="#top" class="lienfff">revenir en haut</a>
+        </nav>
+    </header>
 
-    <script src="../javascript/script.js"></script>
+
+
+    <div class="encadrert"><h2>Bienvenue dans Intra-Amu</h2>le site intranet pour les étudiants du BUT INFO AIX<br>
+        Dans ce site il y aura différentes catégories: </div>
+    <div class="e_encadre">
+        <div class="encadrer"><h3>Actualité</h3>Cette catégorie représente l'actualité de l'IUT.<br><br>
+            Elle vous mettra au courant des évènements à venir.</div>
+
+        <div class="encadrer"><h3>Boutique BUT</h3>Cette catégorie représente la boutique de notre BDE.<br><br>
+            Elle vous donnera l'occasion d'acheter des vêtements liés à celui-ci et d'acheter des billets pour participer aux évènements organisés par notre BDE.</div>
+
+        <div class="encadrer"><h3>Réservation salle</h3> Cette catégorie permet de réserver une salle en choisissant le jour,
+            l'heure et la salle.<br><br> Cette fonctionnalité vous sera utile si vous n'êtes pas placé dans la bonne salle en heure de SAE.</div>
+    </div>
+
+
+
+    <footer>
+        <a class="logo" href="https://www.univ-amu.fr/"><img src="../img/logo_amu_header.png"></a>
+        <a class="insta" href="https://www.instagram.com/iutaixmars?igsh=bjcwZnNxaWw1dXVx"><img src="../img/logo-insta%20bleu.png"></a>
+
+    </footer>
+
+
 </body>
-
 </html>
