--- a/site_departement_info/html/redirect.html
+++ b/site_departement_info/html/redirect.html
@@ -16,7 +16,7 @@
     </div>
     <nav class="navbar">
             <ul class="nav-links">
-                <li><a id="pageactuelle" href="index.html" class="nav-item">Accueil</a></li>
+                <li><a href="index.html" class="nav-item">Accueil</a></li>
                 <li><a href="organisation-des-etudes.html" class="nav-item">Organisation des études</a></li>
                 <li><a href="parcours-et-debouches.html" class="nav-item">Parcours</a></li>
                 <li><a href="bde.html" class="nav-item">BDE</a></li>
