--- a/IntraNet/BoutiqueBDE.html
+++ b/IntraNet/BoutiqueBDE.html
@@ -26,10 +26,11 @@
             <h1 class = "logo_title">Intranet Département Informatique AMU</h1>
         </div>
         <ul>
-            <li><a href="index.html">Accueil</a><li>
-            <li><a href="Actualite.html">Actualité</a><li>
-            <li><a href="BoutiqueBDE.html">Boutique BDE</a><li>
-            <li><a href="ReservationSalle.html">Reservation salle</a><li>
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="Actualite.html">Actualité</a></li>
+            <li><a href="BoutiqueBDE.html">Boutique BDE</a></li>
+            <li><a href="ReservationSalle.html">Reservation salle</a></li>
+            <li><a href="../site_departement_info/html/index.html">Retour site publique</a></li>
         </ul>
     </nav>
 </header>
