--- a/IntraNet/index.html
+++ b/IntraNet/index.html
@@ -15,10 +15,12 @@
                 <h1 class = "logo_title">Intranet Département Informatique AMU</h1>
             </div>
             <ul>
-                <li><a href="index.html">Accueil</a><li>
-                <li><a href="Actualite.html">Actualité</a><li>
-                <li><a href="BoutiqueBDE.html">Boutique BDE</a><li>
-                <li><a href="ReservationSalle.html">Reservation salle</a><li>
+                <li><a href="index.html">Accueil</a></li>
+                <li><a href="Actualite.html">Actualité</a></li>
+                <li><a href="BoutiqueBDE.html">Boutique BDE</a></li>
+                <li><a href="ReservationSalle.html">Reservation salle</a></li>
+                <li><a href="../site_departement_info/html/index.html">Retour site publique</a></li>
+            </ul>
 </header>
 <div class="encadrert"><h2>Bienvenue dans Intra-Amu</h2>le site intranet pour les étudiants du BUT INFO AIX<br>
     Dans ce site il y aura différentes catégories: </div>
@@ -40,6 +42,6 @@
 
     </footer>
 
-
+    <script src="javascript/redirect.js"></script>
 </body>
 </html>
